[package]
name = "GrofTrading"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
libc = "0.2.172"
memmap2 = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.5", features = ["mysql","runtime-async-std", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread"] }
